vpc/peering-connection/template-a.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Launch an EC2 instance

Parameters:
  InstanceType:
    Type: String
    Default: t2.micro
  ImageID:
    Type: String
    Default: ami-01e3c4a339a264cc9
  SubnetId:
    Type: String
    Default: subnet-0429be2035581e3ef
  VpcID:
    Type: String
    Default: vpc-045afa521fd329de1

Resources:
  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: AmazonSSMManagedInstanceCoreRole
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2InstanceRole

  MyEC2Instance: 
    Type: AWS::EC2::Instance
    Properties: 
      InstanceType: !Ref InstanceType
      ImageId: !Ref ImageID
      NetworkInterfaces:
        - SubnetId: !Ref SubnetId
          DeviceIndex: 0
          AssociatePublicIpAddress: true
          GroupSet:
            - !GetAtt InstanceSecurityGroup.GroupId
          DeleteOnTermination: true
      IamInstanceProfile: !Ref EC2InstanceProfile

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and SSH access
      VpcId: !Ref VpcID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
