vpc/peering-connection/template-b.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Launch an EC2 instance

Parameters:
  InstanceType:
    Type: String
    Default: t2.micro
  ImageID:
    Type: String
    Default: ami-01e3c4a339a264cc9
  SubnetId:
    Type: String
    Default: subnet-014bc3e591638ffca
  VpcID:
    Type: String
    Default: vpc-0408033ecbcf2599d

Resources:

  MyEC2Instance: 
    Type: AWS::EC2::Instance
    Properties: 
      InstanceType: !Ref InstanceType
      ImageId: !Ref ImageID
      NetworkInterfaces:
        - SubnetId: !Ref SubnetId
          DeviceIndex: 0
          AssociatePublicIpAddress: true
          GroupSet:
            - !GetAtt InstanceSecurityGroup.GroupId
          DeleteOnTermination: true
      UserData: 
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "<html><body><h1>Hello from Apache on Amazon Linux 2!</h1></body></html>" > /var/www/html/index.html
      Tags:
        - Key: Name
          Value: ApacheServer

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and SSH access
      VpcId: !Ref VpcID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
